--- a/content/projects/Tesla-clone.mdx
+++ b/content/projects/Tesla-clone.mdx
@@ -1,10 +1,9 @@
 ---
 title: Tesla-clone
-subtitle: A frontend clone of Business website of Tesla.
+description: A frontend clone of Business website of Tesla.
 date: "2/2/2024"
 repository: "https://github.com/y3sterd4y/tesla-clone"
 url: "https://tesla-clone-black-sigma.vercel.app/"
-tags:
 ---
 
 I clone the landingpage from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
