--- a/content/projects/atichat.com.mdx
+++ b/content/projects/atichat.com.mdx
@@ -1,10 +1,9 @@
 ---
 title: atichat.com
-subtitle: The webpage that you are now viewing
-date: "11-2-2023"
+description: The webpage that you are now viewing
+date: "11/2/2023"
 repository: "https://github.com/y3sterd4y/y3sterd4y.github"
-url: 
-tags: 
+url: ""
 ---
 
 
