Update blog to use .mdx and layout home page

--- a/app/content/(projects)/Tesla-clone.mdx
+++ b/app/content/(projects)/Tesla-clone.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tesla-clone
 description: A frontend clone of Business website of Tesla.
-date: "2/2/2024"
+publishedAt: "2/2/2024"
 repository: "https://github.com/y3sterd4y/tesla-clone"
 url: "https://tesla-clone-black-sigma.vercel.app/"
 published: true
