--- a/app/content/(projects)/atichat.com.mdx
+++ b/app/content/(projects)/atichat.com.mdx
@@ -1,12 +1,10 @@
 ---
 title: atichat.com
 description: The webpage that you are now viewing
-date: "11/2/2023"
+publishedAt: "11/2/2023"
 repository: "https://github.com/y3sterd4y/y3sterd4y.github"
 url: ""
 published: true
 ---
-
-
 
 Like so many others, all I wanted was a place to compile some of the projects that I worked on.
