--- a/app/content/(blog)/First-Post.mdx
+++ b/app/content/(blog)/First-Post.mdx
@@ -1,7 +1,7 @@
 ---
 title: "First Post"
-description: "way I've developed thus far"
 publishedAt: "3/17/2024"
+coverImage: "/images/blog/first-post-cover.avif"
 published: true
 ---
 
