add thumbnail to blog page, fix navigater z-index value

--- a/app/content/(blog)/First-Post.mdx
+++ b/app/content/(blog)/First-Post.mdx
@@ -1,5 +1,6 @@
 ---
 title: "First Post"
+description: "Welcome to my debut blog post! Let's explore passions, share stories, and embrace new beginnings together! 🌟"
 publishedAt: "3/17/2024"
 coverImage: "/images/blog/first-post-cover.avif"
 published: true
@@ -16,8 +17,6 @@ For me, it's about sharing my passions, experiences, and insights with others wh
 Well, expect the unexpected! While I have some ideas brewing—ranging from personal reflections to discussions on art, technology, travel, and more—I'm also excited to let this space evolve organically. After all, life is full of surprises, and I want this blog to reflect that spontaneity and variety.
 
 With that said, let's dive in and see where this journey takes us. Here's to new beginnings, shared experiences, and the magic of words woven together. Thank you for being a part of it!
-
-<br/>
 
 **Until next time 🙌**
 
