fix title params.slug and update layout blogCard

--- a/app/content/projects/atichat.vercel.app.mdx
+++ b/app/content/projects/atichat.vercel.app.mdx
@@ -1,10 +1,9 @@
 ---
-title: atichat.com
+title: atichat.vercel.app
 description: The webpage that you are now viewing
 publishedAt: "11/2/2023"
 repository: "https://github.com/y3sterd4y/y3sterd4y.github"
 url: ""
-tag: [Next.js]
 published: true
 ---
 
