--- a/app/content/blog/First-Post/page.mdx
+++ b/app/content/blog/First-Post/page.mdx
@@ -2,7 +2,7 @@
 title: "First Post"
 description: "Welcome to my debut blog post! Let's explore passions, share stories, and embrace new beginnings together! 🌟"
 publishedAt: "3/17/2024"
-coverImage: "/images/blog/first-post-cover.avif"
+coverImage: ""
 published: true
 ---
 
