--- a/app/content/blog/First-Post/page.mdx
+++ b/app/content/blog/First-Post/page.mdx
@@ -3,6 +3,7 @@ title: "First Post"
 description: "Welcome to my debut blog post! Let's explore passions, share stories, and embrace new beginnings together! 🌟"
 publishedAt: "3/17/2024"
 coverImage: ""
+readingTime: 2
 published: true
 ---
 
