--- a/app/content/projects/Tesla-clone/page.mdx
+++ b/app/content/projects/Tesla-clone/page.mdx
@@ -4,6 +4,7 @@ description: A frontend clone of Business website of Tesla.
 publishedAt: "2/2/2024"
 repository: "https://github.com/y3sterd4y/tesla-clone"
 url: "https://tesla-clone-black-sigma.vercel.app/"
+tags: ["Nextjs", "Typescript", "Tailwindcss", "Framer Motion", "Vercel"]
 published: true
 ---
 
