--- a/app/content/projects/atichat-vercel-app/page.mdx
+++ b/app/content/projects/atichat-vercel-app/page.mdx
@@ -4,6 +4,7 @@ description: The webpage that you are now viewing
 publishedAt: "11/2/2023"
 repository: "https://github.com/y3sterd4y/y3sterd4y.github"
 url: ""
+tags: ["Nextjs", "Typescript", "Tailwindcss", "shadcn/ui", "Framer Motion", "MDX", "Vercel"]
 published: true
 ---
 
