add customimage to mdx content

--- a/app/content/projects/Tesla-clone/page.mdx
+++ b/app/content/projects/Tesla-clone/page.mdx
@@ -9,3 +9,6 @@ published: true
 ---
 
 I clone the landingpage from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
+
+<CustomImage src="/images/projects/tesla-clone-black-sigma.vercel.app.png" alt="" caption="A screenshot of https://tesla-clone-black-sigma.vercel.app/ website" />
+
