--- a/app/content/projects/atichat-vercel-app/page.mdx
+++ b/app/content/projects/atichat-vercel-app/page.mdx
@@ -9,3 +9,5 @@ published: true
 ---
 
 Like so many others, all I wanted was a place to compile some of the projects that I worked on.
+
+<CustomImage src="/images/projects/atichat.vercel.app.png" alt="" caption="A screenshot of https://atichat.vercel.app/ website" />
