--- a/app/content/projects/Tesla-clone/page.mdx
+++ b/app/content/projects/Tesla-clone/page.mdx
@@ -1,11 +1,12 @@
 ---
-title: Tesla-clone
+title: Tesla clone
 description: A frontend clone of Business website of Tesla.
 publishedAt: "2/2/2024"
 repository: "https://github.com/y3sterd4y/tesla-clone"
 url: "https://tesla-clone-black-sigma.vercel.app/"
 tags: ["Nextjs", "Typescript", "Tailwindcss", "Framer Motion", "Vercel"]
-published: true
+thumbnail: "/images/projects/tesla-clone-black-sigma.vercel.app.png"
+status: "On Hold"
 ---
 
 I clone the landingpage from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
