--- a/app/content/projects/atichat-vercel-app/page.mdx
+++ b/app/content/projects/atichat-vercel-app/page.mdx
@@ -5,7 +5,8 @@ publishedAt: "11/2/2023"
 repository: "https://github.com/y3sterd4y/y3sterd4y.github"
 url: ""
 tags: ["Nextjs", "Typescript", "Tailwindcss", "shadcn/ui", "Framer Motion", "MDX", "Vercel"]
-published: true
+thumbnail: "/images/projects/atichat.vercel.app.png"
+status: "In Progress"
 ---
 
 Like so many others, all I wanted was a place to compile some of the projects that I worked on.
