--- a/app/content/projects/Tesla-clone/page.mdx
+++ b/app/content/projects/Tesla-clone/page.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tesla clone
-description: A frontend clone of Business website of Tesla.
+description: A landing page clone of the Tesla website.
 publishedAt: "2/2/2024"
 repository: "https://github.com/y3sterd4y/tesla-clone"
 url: "https://tesla-clone-black-sigma.vercel.app/"
@@ -9,7 +9,7 @@ thumbnail: "/images/projects/tesla-clone-black-sigma.vercel.app.png"
 status: "On Hold"
 ---
 
-I clone the landingpage from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
+I clone the landing page from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
 
 <CustomImage src="/images/projects/tesla-clone-black-sigma.vercel.app.png" alt="" caption="A screenshot of https://tesla-clone-black-sigma.vercel.app/ website" />
 
