add coming soon page and mdx now has carousel

--- a/app/content/projects/atichat-vercel-app/page.mdx
+++ b/app/content/projects/atichat-vercel-app/page.mdx
@@ -5,10 +5,11 @@ publishedAt: "11/2/2023"
 repository: "https://github.com/y3sterd4y/y3sterd4y.github"
 url: ""
 tags: ["Nextjs", "Typescript", "Tailwindcss", "shadcn/ui", "Framer Motion", "MDX", "Vercel"]
-thumbnail: "/images/projects/atichat.vercel.app.png"
+thumbnail: "/images/projects/atichat/1.png"
 status: "In Progress"
 ---
 
-Like so many others, all I wanted was a place to compile some of the projects that I worked on.
 
-<CustomImage src="/images/projects/atichat.vercel.app.png" alt="" caption="A screenshot of https://atichat.vercel.app/ website" />
+<MDXCarousel images={["/images/projects/atichat/1.png", "/images/projects/atichat/2.png", "/images/projects/atichat/3.jpg", "/images/projects/atichat/4.jpg", "/images/projects/atichat/5.jpg"]} caption="A screenshots of https://atichat.vercel.app/ website" />
+
+Like so many others, all I wanted was a place to compile some of the projects that I worked on.
