--- a/app/content/projects/Tesla-clone/page.mdx
+++ b/app/content/projects/Tesla-clone/page.mdx
@@ -5,11 +5,11 @@ publishedAt: "2/2/2024"
 repository: "https://github.com/y3sterd4y/tesla-clone"
 url: "https://tesla-clone-black-sigma.vercel.app/"
 tags: ["Nextjs", "Typescript", "Tailwindcss", "Framer Motion", "Vercel"]
-thumbnail: "/images/projects/tesla-clone-black-sigma.vercel.app.png"
+thumbnail: "/images/projects/tesla/1.png"
 status: "On Hold"
 ---
 
 I clone the landing page from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
 
-<CustomImage src="/images/projects/tesla-clone-black-sigma.vercel.app.png" alt="" caption="A screenshot of https://tesla-clone-black-sigma.vercel.app/ website" />
+<MDXImage src="/images/projects/tesla/1.png" alt="" caption="A screenshots of website" />
 
