--- a/app/content/projects/Tesla-clone/page.mdx
+++ b/app/content/projects/Tesla-clone/page.mdx
@@ -11,5 +11,5 @@ status: "On Hold"
 
 I clone the landing page from the Tesla website. The coding doesn't look great, but I'll keep working to improve it.
 
-<MDXImage src="/images/projects/tesla/1.png" alt="" caption="A screenshots of website" />
+<MDXCarousel images={["/images/projects/tesla/1.png", "/images/projects/tesla/2.png", "/images/projects/tesla/3.png"]} caption="A screenshots of website" />
 
