--- a/app/content/projects/RockstarGames-clone/page.mdx
+++ b/app/content/projects/RockstarGames-clone/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: RockstarGames clone
+title: Rockstargames clone
 description: "This project is an ongoing clone of the RockstarGames website"
 publishedAt: "10/2/2024"
 repository: "https://github.com/me22mer/rockstar-clone"
