--- a/app/content/projects/atichat-vercel-app/page.mdx
+++ b/app/content/projects/atichat-vercel-app/page.mdx
@@ -10,6 +10,6 @@ status: "In Progress"
 ---
 
 
-<MDXCarousel images={["/images/projects/atichat/1.png", "/images/projects/atichat/2.png", "/images/projects/atichat/3.jpg", "/images/projects/atichat/4.jpg", "/images/projects/atichat/5.jpg"]} caption="A screenshots of https://atichat.vercel.app/ website" />
+<MDXCarousel images={["/images/projects/atichat/1.png", "/images/projects/atichat/2.png", "/images/projects/atichat/3.jpg", "/images/projects/atichat/4.jpg", "/images/projects/atichat/5.jpg"]} caption="" />
 
 Like so many others, all I wanted was a place to compile some of the projects that I worked on.
