--- a/app/content/projects/MDX-Management/page.mdx
+++ b/app/content/projects/MDX-Management/page.mdx
@@ -1,3 +1,15 @@
+---
+title: MDX Management
+description: ""
+publishedAt: ""
+repository: "https://github.com/me22mer/"
+thumbnail: ""
+tags: ["Nextjs", "Typescript", "Tailwindcss", "shadch/ui","Framer Motion", "Vercel"]
+url: ""
+status: "In Progress"
+---
+
+
 # MDX-Management
 
 Add your content here.
